--- a/src/style.css
+++ b/src/style.css
@@ -5,11 +5,12 @@ body * {
   vertical-align: top;
   box-sizing: border-box;
   word-break: break-all;
+  font-family: "Quicksand", sans-serif;
 }
 
 main {
   display: inline-block;
-  background-color: yellow;
+  background-color: ghostwhite;
   width: 800px;
   margin-left: calc((100% - 800px) / 2);
   height: 450px;
@@ -18,24 +19,89 @@ main {
 .left-column {
   display: inline-block;
   float: left;
-  width: 65%;
+  width: 75%;
   height: 100%;
-  background-color: blue;
+  background-color: antiquewhite;
 }
+
 .top-row {
-  height: 45%;
-  background-color: gold;
+  height: 40%;
+  padding: 30px 5px 20px 30px;
 }
+.intro-text {
+  margin-bottom: 25px;
+  line-height: 20px;
+}
+.date {
+  font-weight: 100;
+}
+.intro-text > button {
+  width: 20px;
+  height: 20px;
+  margin-left: 15px;
+  border-radius: 50%;
+  border-color: transparent;
+  font-size: 8px;
+  background-color: #f7f7f9;
+}
+.veg,
+.all {
+  display: inline-block;
+  margin-right: 12px;
+  text-align: center;
+  float: left;
+  width: 10%;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+  height: 100px;
+  font-size: 10px;
+}
+.veg-emoji {
+  font-size: 30px;
+  margin-top: 8px;
+}
+.weight {
+  margin: 5px 0;
+  font-size: 13px;
+  font-weight: 700;
+}
+.all {
+  width: 54px;
+  background-color: #6236ff;
+  margin-left: 15px;
+  color: #fff;
+  border: none;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.1);
+}
+.all > span {
+  font-size: 12px;
+  line-height: 50px;
+}
+.all > button {
+  display: block;
+  background-color: white;
+  border: none;
+  color: #6236ff;
+  font-size: 20px;
+  font-weight: 700;
+  height: 48px;
+  width: 48px;
+  border-radius: 50%;
+  margin: 0 0 3px 3px;
+}
+
 .bottom-row {
-  height: 5%;
+  height: 60%;
   background-color: beige;
 }
 .left-col {
   display: inline-block;
   float: left;
-  width: 55%;
-  height: 100%;
+  width: calc(55% - 60px);
+  height: calc(100% - 60px);
   background-color: aqua;
+  margin: 30px;
 }
 .right-col {
   display: inline-block;
@@ -47,7 +113,7 @@ main {
 .right-column {
   display: inline-block;
   float: left;
-  width: 35%;
+  width: 25%;
   height: 100%;
   background-color: red;
 }
