--- a/src/style.css
+++ b/src/style.css
@@ -102,6 +102,18 @@ main {
   height: calc(100% - 60px);
   background-color: aqua;
   margin: 30px;
+  padding: 30px;
+  border: 1px solid #ccc;
+  border-radius: 30px;
+}
+.left-col > h2 {
+  font-size: 18px;
+  margin-bottom: 6px;
+}
+.left-col > p {
+  font-size: 12px;
+  color: gray;
+  line-height: 18px;
 }
 .right-col {
   display: inline-block;
