--- a/src/style.css
+++ b/src/style.css
@@ -113,11 +113,11 @@ button {
 .left-col > h2 {
   margin: 35px 0 0 40px;
   font-size: 19px;
-  margin-bottom: 4px;
+  margin-bottom: 5px;
 }
 .left-col > p {
   margin: 0 0 0 40px;
-  font-size: 12px;
+  font-size: 11px;
   color: gray;
   line-height: 18px;
 }
@@ -223,6 +223,43 @@ button {
 .right-co > img {
   width: 175px;
   margin-top: 37px;
+  position: absolute;
+}
+.top-ro {
+  color: #fff;
+  padding-top: 30px;
+  padding-left: 30px;
+}
+.top-ro > h2 {
+  font-size: 19px;
+  margin-bottom: 5px;
+}
+.top-ro > p {
+  font-size: 11px;
+  line-height: 18px;
+}
+.square {
+  height: 100px;
+  width: 50px;
+  background-color: #6236ff;
+  position: relative;
+  float: right;
+  top: 225px;
+}
+.circle {
+  height: 100px;
+  width: 100px;
+  background-color: #fff;
+  border-radius: 50%;
+  position: relative;
+  float: right;
+  top: 173px;
+  right: -50px;
+}
+.bottom-ro > img {
+  width: 200px;
+  margin-top: 17px;
+  margin-left: 67px;
 }
 
 footer {
